--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,55 @@
-.App {
-  text-align: center;
+.nav-ul  li {
+  display: inline-block;
+  padding: 10px;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-ul li a {
+  color: white;
+  padding: 5px;
+  text-decoration: none;
 }
+
+.nav-ul  {
+  padding: 5px;
+  margin: 0;
+  background-color: skyblue;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  background-color: skyblue;
+}
+
+.InputBox {
+  display: block;
+  margin: 25px;
+  padding:7px;
+  width: 300px;
+  border: 1px solid skyblue;
+}
+
+.register {
+  margin-left: 45%;
+}
+.register, .product{
+  margin-left: 30%;
+}
+.login {
+  margin-left: 30%;
+  margin-top: 100%;
+}
+
+.appButton {
+    margin: 15px 25px 12px;
+    padding: 10px;
+    width: 12%;
+    background: skyblue;
+
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -35,4 +79,48 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.active {
+  color: red;
+
+}
+
+.nav-right {
+  text-align: right;
+}
+.logo {
+  width: 45px;
+  float: left;
+  border-radius:3px;
+  margin-top: 3px;
+}
+.invalid-input {
+  color:red;
+  margin-top:-20px;
+  display: block;
+  margin-left: 20px;
+}
+
+.product-list {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.product-list ul li  {
+  display: inline-block;
+  border: 1px solid skyblue;
+  padding: 5px;
+  width: 150px;
+}
+.product-list ul {
+  margin: 0;
+}
+
+.search-product-box {
+  width: 400px;
+  margin:20px;
+  height:40px;
+  border:1px solid skyblue;
+  padding-left:20px;
 }
